--- a/install
+++ b/install
@@ -53,20 +53,21 @@ full)
     sudo apt-get install php-pgsql -y
 
 	sudo service apache2 restart
-
-	sudo cp ./_utils/register.php /var/www/html
+	
+	sudo cp ./_utils/config.php /var/www/html
 	sudo cp ./_utils/status.php /var/www/html
+	sudo cp ./_utils/register.php /var/www/html
 
 	sed -i "s/db_pwd/$db_pwd/g" "./setup.ini"
 	sed -i "s/db_pwd/$db_pwd/g" "./GatewayServer/setup.ini"
-	sed -i "s/db_pwd/$db_pwd/g" "/var/www/html/register.php"
-	sed -i "s/db_pwd/$db_pwd/g" "/var/www/html/status.php"
-	sed -i "s/host_ip/$host_ip/g" "/var/www/html/status.php"
 
-	wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+	sed -i "s/db_pwd/$db_pwd/g" "/var/www/html/config.php"
+	sed -i "s/host_ip/$host_ip/g" "/var/www/html/config.php"
+
+	wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/pgsql.gpg > /dev/null
 	echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list > /dev/null
 	sudo apt-get update -y
-	sudo apt -y install postgresql-12
+	sudo apt -y install postgresql-13
 	POSTGRESQLVERSION=$(psql --version | cut -c 19-20)
 
 	cd "/etc/postgresql/$POSTGRESQLVERSION/main"
@@ -192,12 +193,12 @@ web)
 
 	sudo service apache2 restart
 
+	sudo cp ./_utils/config.php /var/www/html
 	sudo cp ./_utils/register.php /var/www/html
 	sudo cp ./_utils/status.php /var/www/html
 
-	sed -i "s/db_pwd/$db_pwd/g" "/var/www/html/register.php"
-	sed -i "s/db_pwd/$db_pwd/g" "/var/www/html/status.php"
-	sed -i "s/host_ip/$host_ip/g" "/var/www/html/status.php"
+	sed -i "s/db_pwd/$db_pwd/g" "/var/www/html/config.php"
+	sed -i "s/host_ip/$host_ip/g" "/var/www/html/config.php"
 
 	;;
 
